# quant-project

./: .gitignore  README.md  pyproject.toml
data/: etf_pairs.csv  momentum_dollar_adv.csv  momentum_universe.csv  spx_vix.csv  spy_ohlc.csv
notebooks/: 01_momentum.ipynb  02_pairs.ipynb  03_short_vol.ipynb  04_overnight.ipynb
results/: momentum_capacity.csv  momentum_cost_sweep.csv  momentum_metrics.csv  overnight_cost_sweep.csv  overnight_decomposition.csv  pairs_diagnostics.csv  pairs_metrics.csv  straddle_cost_sweep.csv  straddle_metrics.csv  straddle_tail.csv
scripts/: run_momentum.py  run_overnight.py  run_pairs.py  run_straddle.py
src/quantbt/: backtest.py  blackscholes.py  costs.py  data.py  metrics.py  plotting.py
src/quantbt/strategies/: momentum.py  overnight.py  pairs.py  short_vol.py
tests/: test_backtest.py  test_blackscholes.py  test_costs.py  test_metrics.py  test_momentum.py  test_overnight.py  test_pairs.py  test_short_vol.py  test_tail_stats.py
