[build-system]
  requires = ["setuptools>=68"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "quantbt"
  version = "0.1.0"
  description = "Walk-forward backtester with momentum and stat-arb strategies"
  requires-python = ">=3.11"
  dependencies = [
      "numpy",
      "pandas",
      "scipy",
      "statsmodels",
      "yfinance",
      "matplotlib",
  ]

  [project.optional-dependencies]
  dev = ["pytest", "ruff"]

  [tool.setuptools.packages.find]
  where = ["src"]

  [tool.ruff]
  line-length = 100

  [tool.pytest.ini_options]
  testpaths = ["tests"]